# curlyference

./: .gitignore  README.md  meson.build
.cache/clangd/index/: gstcurlyference.c.C189F07B94C9ECFB.idx  gstcurlyference.cpp.403BF605A2D216E6.idx  gstcurlyference.h.F4261E5A02B2256F.idx
src/: gstcurlyference.c  gstcurlyference.cpp  gstcurlyference.h
